feat : lexer first implementation